Add image of the Apollo Guidance Computer

--- a/doc/rotation-matrices.ipynb
+++ b/doc/rotation-matrices.ipynb
@@ -925,6 +925,19 @@
     "The easiest way to avoid this whole \"gimbal lock\" problem,\n",
     "is simply to never convert rotation matrices to angles."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And as a reminder not to underestimate \"gimbal lock\",\n",
+    "have a look at the warning lights on the\n",
+    "Apollo Guidance Computer:\n",
+    "\n",
+    "![DSKY](http://www.ibiblio.org/apollo/P6220704_DSKY.png)\n",
+    "\n",
+    "Image from http://www.ibiblio.org/apollo/ForDummies.html, CC0."
+   ]
   }
  ],
  "metadata": {
@@ -943,7 +956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4+"
   }
  },
  "nbformat": 4,
