--- a/doc/quaternions.ipynb
+++ b/doc/quaternions.ipynb
@@ -257,6 +257,84 @@
     "R = sp.trigsimp(sp.trigsimp(q.to_rotation_matrix()))\n",
     "R"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other Conventions\n",
+    "\n",
+    "YPR: yaw, pitch, roll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y, p, r = sp.symbols('y p r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_ypr = (\n",
+    "    Quaternion.from_axis_angle((0, 0, 1), y) *\n",
+    "    Quaternion.from_axis_angle((0, 1, 0), p) *\n",
+    "    Quaternion.from_axis_angle((1, 0, 0), r))\n",
+    "q_ypr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Something like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert(ypr):\n",
+    "    q = Quaternion.from_axis_angle((0, 0, 1), sp.pi/2)\n",
+    "    return sp.simplify(q * ypr * q.conjugate())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert(Quaternion.from_axis_angle((1, 0, 0), 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q.subs([\n",
+    "    (alpha, 1),\n",
+    "    (beta, 0),\n",
+    "    (gamma, 0),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4+"
+   "version": "3.7.5rc1"
   }
  },
  "nbformat": 4,
