Add section about quaternion to ASDF rotations

--- a/doc/quaternions.ipynb
+++ b/doc/quaternions.ipynb
@@ -9,7 +9,23 @@
     "This notebook shows the same thing as the\n",
     "[notebook about rotation matrices](rotation-matrices.ipynb),\n",
     "just using quaternions instead of rotation matrices.\n",
-    "For more details, have a look over there."
+    "For more detailed explanations, have a look over there."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You might be tempted to use the equations from\n",
+    "[Wikipedia](https://en.wikipedia.org/wiki/Conversion_between_quaternions_and_Euler_angles#Euler_Angles_to_Quaternion_Conversion),\n",
+    "but those use different conventions for axes and angles!\n",
+    "The resulting equations will have a similar structure but will not be quite identical.\n",
+    "\n",
+    "With the code below, any convention can be calculated by adapting\n",
+    "\n",
+    "* the pairing of angles with their corresponding axes\n",
+    "* the sign of angles (or direction of axes) according to handedness\n",
+    "* the order of combining the individual axis/angle quaternions"
    ]
   },
   {
@@ -61,7 +77,7 @@
    "metadata": {},
    "source": [
     "Example:\n",
-    "Rotating the y unit vector (i.e. “looking straight ahead”)\n",
+    "Rotating the y unit vector (i.e. “looking north”)\n",
     "by 90 degrees to the left:"
    ]
   },
@@ -172,7 +188,8 @@
     "This is easy,\n",
     "we only have to make sure to use the right order.\n",
     "As with rotation matrices,\n",
-    "you should read this from right to left:"
+    "you should read this from right to left\n",
+    "(first *roll*, then *elevation*, then *azimuth*):"
    ]
   },
   {
@@ -257,6 +274,276 @@
     "R = sp.trigsimp(sp.trigsimp(q.to_rotation_matrix()))\n",
     "R"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quaternion to ASDF rotations\n",
+    "\n",
+    "Again, please note that the equations from\n",
+    "[Wikipedia](https://en.wikipedia.org/wiki/Conversion_between_quaternions_and_Euler_angles#Quaternion_to_Euler_Angles_Conversion)\n",
+    "use different conventions for axes and angles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We already know how to convert a rotation matrix to ASDF angles,\n",
+    "and we know how to convert a quaternion to a rotation matrix,\n",
+    "so let's try that:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b, c, d = sp.symbols('a:d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.simplify(sp.Quaternion(a, b, c, d).to_rotation_matrix())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we assume a unit quaternion, all the denominators are actually 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Rq = sp.simplify(sp.Quaternion(a, b, c, d).to_rotation_matrix().subs(a**2 + b**2 + c**2 + d**2, 1))\n",
+    "Rq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The [notebook about rotation matrices](rotation-matrices.ipynb#Rotation-Matrix-to-Angles)\n",
+    "shows how to obtain $\\alpha$, $\\beta$ and $\\gamma$ from this matrix.\n",
+    "\n",
+    "We can get $\\alpha$ from the top middle and the central element:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.atan2(-Rq[0, 1], Rq[1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The bottom middle element provides $\\beta$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.asin(Rq[2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "**Note:**\n",
+    "\n",
+    "As mentioned in the\n",
+    "[notebook about rotation matrices](rotation-matrices.ipynb#Rotation-Matrix-to-Angles),\n",
+    "the argument of the `asin()` function has to be in the domain `[-1.0; 1.0]`.\n",
+    "\n",
+    "Make sure to handle this case,\n",
+    "e.g. by re-normalizing the quaternion.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, $\\gamma$ can be obtained from the bottom left and right elements:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.atan2(-Rq[2, 0], Rq[2, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gimbal Lock\n",
+    "\n",
+    "As shown in the\n",
+    "[notebook about rotation matrices](rotation-matrices.ipynb#Gimbal-Lock),\n",
+    "there is a problem when $\\beta = \\pm 90°$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For $\\beta = 90°$ (which means $2ab+2cd = 1$),\n",
+    "we can obtain a value for $\\alpha + \\gamma$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.atan2(Rq[0, 2], -Rq[1, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we for example choose this value to be $\\alpha$,\n",
+    "this will result in $\\gamma = 0$.\n",
+    "\n",
+    "Alternatively, we can use this expression:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.atan2(Rq[1, 0], Rq[0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For $\\beta = -90°$ (which means $2ab+2cd = -1$),\n",
+    "we can use the following expression for $\\alpha + \\gamma$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.atan2(-Rq[0, 2], Rq[1, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, if we for example choose this value to be $\\alpha$,\n",
+    "this will result in $\\gamma = 0$.\n",
+    "\n",
+    "Alternatively, we can use this expression:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.atan2(Rq[1, 0], Rq[0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_)"
+   ]
   }
  ],
  "metadata": {
@@ -275,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4+"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
