--- a/doc/rotation-matrices.ipynb
+++ b/doc/rotation-matrices.ipynb
@@ -688,6 +688,27 @@
     "\n",
     "    beta = asin(R[2, 1])\n",
     "\n",
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "**Note:**\n",
+    "\n",
+    "The argument of the `asin()` function has to be in the domain `[-1.0; 1.0]`\n",
+    "(see https://en.cppreference.com/w/c/numeric/math/asin).\n",
+    "\n",
+    "Due to rounding errors,\n",
+    "the value might be slightly outside this range,\n",
+    "which would lead to a return value of `NaN`.\n",
+    "\n",
+    "Make sure to handle this case,\n",
+    "e.g. by re-normalizing the rotation matrix.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The rest of the matrix components depend on more than one variable,\n",
     "but there are a few elements that depend only on two variables.\n",
     "\n",
@@ -816,6 +837,28 @@
    "outputs": [],
    "source": [
     "sp.atan2(0, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "**Note:**\n",
+    "\n",
+    "If the implementation supports IEEE floating-point arithmetic (IEC 60559),\n",
+    "no `NaN` is returned (except if one of the inputs is `NaN`),\n",
+    "see https://en.cppreference.com/w/c/numeric/math/atan2.\n",
+    "\n",
+    "In this case,\n",
+    "`atan2()` will return $\\pm 0$ or $\\pm \\pi$\n",
+    "(which is generally not correct).\n",
+    "\n",
+    "Depending on your use case, however, this might be good enough.\n",
+    "If not, keep reading below!\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -956,7 +999,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4+"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
