Fix NumPyPrinter import

--- a/doc/rotation-matrices.ipynb
+++ b/doc/rotation-matrices.ipynb
@@ -652,7 +652,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sympy.printing.pycode import NumPyPrinter\n",
+    "from sympy.printing.numpy import NumPyPrinter\n",
     "print(NumPyPrinter().doprint(R))"
    ]
   },
