--- a/doc/rotation-matrices.ipynb
+++ b/doc/rotation-matrices.ipynb
@@ -7,7 +7,7 @@
     "# Converting ASDF Rotations to Rotation Matrices\n",
     "\n",
     "To rotate objects in an ASDF scene,\n",
-    "you can use *azimuth*, *elevation* and *roll* angles,\n",
+    "you can use [azimuth, elevation and roll angles](transform.rst#rot),\n",
     "for example like this:\n",
     "\n",
     "```xml\n",
@@ -39,10 +39,10 @@
     "* Direction of the axes:\n",
     "  The ASDF uses the \"ENU\" (east, north, up) convention.\n",
     "\n",
-    "* [Euler angles vs. Tait-Bryan angles](https://en.wikipedia.org/wiki/Euler_angles):\n",
-    "  The ASDF uses a variation of Tait-Bryan.\n",
+    "* [Euler angles vs. Tait--Bryan angles](https://en.wikipedia.org/wiki/Euler_angles):\n",
+    "  The ASDF uses a variation of Tait--Bryan.\n",
     "\n",
-    "* There many [possible conventions](https://en.wikipedia.org/wiki/Axes_conventions)\n",
+    "* There are many [possible conventions](https://en.wikipedia.org/wiki/Axes_conventions)\n",
     "  for the order of angles\n",
     "  and which axes they rotate around:\n",
     "  The ASDF conventions are shown in detail below.\n",
@@ -751,7 +751,7 @@
     "$\\frac{-R_{0, 1}}{R_{1, 1}}$\n",
     "and take the arc-tangent of the result.\n",
     "\n",
-    "To get the right quadrant of the result,\n",
+    "To get the appropriate quadrant of the result,\n",
     "we will use the function [atan2()](https://en.wikipedia.org/wiki/Atan2)\n",
     "in numeric calculations:\n",
     "\n",
@@ -972,7 +972,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -986,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
