Minor changes all over the documentation

--- a/doc/rotation-matrices.ipynb
+++ b/doc/rotation-matrices.ipynb
@@ -37,7 +37,7 @@
     "  The ASDF uses a right-handed one.\n",
     "\n",
     "* Direction of the axes:\n",
-    "  The ASDF uses the \"ENU\" (east, north, up) convention.\n",
+    "  The ASDF uses the ENU (east, north, up) convention.\n",
     "\n",
     "* [Euler angles vs. Tait--Bryan angles](https://en.wikipedia.org/wiki/Euler_angles):\n",
     "  The ASDF uses a variation of Tait--Bryan.\n",
@@ -55,8 +55,8 @@
     "\n",
     "* [Rotating vectors (= \"active\" = \"alibi\")\n",
     "  vs. rotating the coordinate system (= \"passive\" = \"alias\")](https://en.wikipedia.org/wiki/Active_and_passive_transformation):\n",
-    "  In the following derivations we consider the \"active\" situation,\n",
-    "  but a similar derivation can be done for the \"passive\" case.  \n",
+    "  In the following derivations we consider the *active* situation,\n",
+    "  but a similar derivation can be done for the *passive* case.  \n",
     "  In case you are wondering: the functions\n",
     "  [sympy.matrices.rot_axis1()](https://docs.sympy.org/latest/modules/matrices/matrices.html#sympy.matrices.dense.rot_axis1)\n",
     "  etc. do the latter, therefore we cannot use them here\n",
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ASDF uses an \"ENU\" (east, north, up) coordinate system\n",
+    "The ASDF uses an ENU (east, north, up) coordinate system\n",
     "and the reference (\"forward\") direction is *north*,\n",
     "i.e. along the positive y-axis."
    ]
@@ -187,14 +187,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The definitions above use the \"intrinsic\" way of describing the rotations\n",
-    "(i.e. relative to \"local\" coordinate axes).\n",
+    "The definitions above use the *intrinsic* way of describing the rotations\n",
+    "(i.e. relative to *local* coordinate axes).\n",
     "\n",
-    "If you want to use the \"extrinsic\" way,\n",
+    "If you want to use the *extrinsic* way,\n",
     "you can use the same angles.\n",
-    "You just have to choose the right order of (\"global\") rotations:\n",
+    "You just have to choose the right order of *global* rotations:\n",
     "First *roll*, then *elevation*, then *azimuth*.\n",
-    "We will be using the \"extrinsic\" style below."
+    "We will be using the *extrinsic* style below."
    ]
   },
   {
@@ -339,7 +339,7 @@
     "\n",
     "In other words (or rather symbols):\n",
     "\n",
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "\\begin{bmatrix}\n",
     "b_x\\\\\n",
     "b_y\\\\\n",
@@ -351,7 +351,7 @@
     "a_y\\\\\n",
     "a_z\n",
     "\\end{bmatrix}\n",
-    "\\end{equation}"
+    "\\end{equation*}"
    ]
   },
   {
@@ -600,7 +600,7 @@
     "\n",
     "As mentioned above,\n",
     "we have to choose the right sequence of (global) rotations:\n",
-    "first \"roll\", then \"elevation\", then \"azimuth\".\n",
+    "first *roll*, then *elevation*, then *azimuth*.\n",
     "\n",
     "Note that we start with $R_y$ (roll) *on the right*,\n",
     "and then left-apply $R_x$ (elevation)\n",
@@ -965,7 +965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The easiest way to avoid this whole \"gimbal lock\" problem,\n",
+    "The easiest way to avoid this whole *gimbal lock* problem,\n",
     "is simply to never convert rotation matrices to angles."
    ]
   }
