Use the word "degrees" instead of the symbol "°"

--- a/doc/quaternions.ipynb
+++ b/doc/quaternions.ipynb
@@ -434,14 +434,14 @@
     "\n",
     "As shown in the\n",
     "[notebook about rotation matrices](rotation-matrices.ipynb#Gimbal-Lock),\n",
-    "there is a problem when $\\beta = \\pm 90°$."
+    "there is a problem when $\\beta = \\pm 90$ degrees."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For $\\beta = 90°$ (which means $2ab+2cd = 1$),\n",
+    "For $\\beta = 90$ degrees (which means $2ab+2cd = 1$),\n",
     "we can obtain a value for $\\alpha + \\gamma$:"
    ]
   },
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For $\\beta = -90°$ (which means $2ab+2cd = -1$),\n",
+    "For $\\beta = -90$ degrees (which means $2ab+2cd = -1$),\n",
     "we can use the following expression for $\\alpha + \\gamma$:"
    ]
   },
