--- a/doc/rotation-matrices.ipynb
+++ b/doc/rotation-matrices.ipynb
@@ -805,7 +805,7 @@
     "the dreaded [gimbal lock](https://en.wikipedia.org/wiki/Gimbal_lock)!\n",
     "\n",
     "Let's consider the case where\n",
-    "$\\beta = 90°$:"
+    "$\\beta = 90$ degrees:"
    ]
   },
   {
@@ -912,7 +912,7 @@
    "metadata": {},
    "source": [
     "A very similar thing happens for\n",
-    "$\\beta = -90°$:"
+    "$\\beta = -90$ degrees:"
    ]
   },
   {
