A few spelling and stylistic fixes suggested by Tracy

--- a/doc/rotation-matrices.ipynb
+++ b/doc/rotation-matrices.ipynb
@@ -179,7 +179,7 @@
     "  (which is just the normal \"upright\" orientation),\n",
     "* rotating around the local y-axis\n",
     "* positive when the object is leaning towards\n",
-    "  [starbord](https://en.wikipedia.org/wiki/Port_and_starboard)\n",
+    "  [starboard](https://en.wikipedia.org/wiki/Port_and_starboard)\n",
     "  (right hand rule)."
    ]
   },
@@ -787,7 +787,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to above,\n",
+    "Similar to the above,\n",
     "we take the arc-tangent of\n",
     "$\\frac{-R_{2, 0}}{R_{2, 2}}$\n",
     "to get the angle $\\gamma$.\n",
